--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,10 @@
             <artifactId>spring-webmvc</artifactId>
         </dependency>
     </dependencies>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
 </project>
