--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,10 @@
             <artifactId>jsoup</artifactId>
             <version>[1.10,]</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
