--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,16 @@
             <artifactId>jackson-databind</artifactId>
             <version>[2.8.5, 2.8.99]</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+            <version>[0,]</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.plugin</groupId>
+            <artifactId>spring-plugin-core</artifactId>
+            <version>[1.2,]</version>
+        </dependency >
     </dependencies>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
