--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,15 @@
             <artifactId>slf4j-nop</artifactId>
             <version>1.7.24</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>[1,]</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
