--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
             <artifactId>spring-security-taglibs</artifactId>
             <version>4.2.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>[1.8,]</version>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
